# siwx

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  install.ps1  install.sh  rustfmt.toml
.github/workflows/: cd.yml  publish.yml  release.yml  rust-publish.yml
siwx/: Cargo.toml
siwx-cli/: Cargo.toml
siwx-cli/src/: main.rs  output.rs
siwx-cli/src/cmd/: evm.rs  mod.rs  svm.rs
siwx-evm/: Cargo.toml
siwx-evm/src/: eip1271.rs  eip191.rs  lib.rs
siwx-svm/: Cargo.toml
siwx-svm/src/: ed25519.rs  lib.rs
siwx/src/: error.rs  formatter.rs  lib.rs  message.rs  nonce.rs  parser.rs  validate.rs  verifier.rs
skills/siwx/: SKILL.md
