[package]
name = "siwx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CAIP-122 Sign-In with X CLI tool"

[[bin]]
name = "siwx"
path = "src/main.rs"

[dependencies]
siwx.workspace = true
siwx-evm.workspace = true
siwx-svm.workspace = true
clap.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["rt"] }

[lints]
workspace = true
