[package]
name = "siwx-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
siwx.workspace = true
alloy.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
