[package]
name = "siwx-svm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
siwx.workspace = true
ed25519-dalek.workspace = true
bs58.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
